capire come inserire il post e inviare i dati al pg

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -13,13 +13,12 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="/">FakeTaxi</a>
           <div>
-            <a href="/signin" class="btn btn-success">Sign In</a>
-          <a href="/signup" class="btn btn-success">Sign Up</a>
+            <a href="/signin" class="btn btn-success">Registrati</a>
+          <a href="/signup" class="btn btn-success">Accedi</a>
           </div>
         </div>
       </nav>
      <!-- end navbar --> 
-    
     </body>
     
 </html>
